# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg  test_pg_analyzer
.github/workflows/: lint.yml  linter.yml
page_analyzer/: __init__.py  app.py  bd.py  check.py  checker.py  connector.py  db.py  normalizator.py  other_func.py  parser.py  sql_commands.txt  urls.py  validator.py
page_analyzer/templates/: 404.html  base.html  list_urls.html  list_urls_page.html  main_page.html  url_page.html
page_analyzer/templates/models/: flash.html  nav.html
page_analyzer/templates/сomponents/: footer.html
tests/: test_page_analyzing.py  validator.py
